MANVIR SANDBOX/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Global Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1%2E Suspect</fullName>
        </values>
        <values>
            <fullName>2%2E Believe Opp Exists</fullName>
        </values>
        <values>
            <fullName>3%2E Customer-Quote%3B Prospect-Shortlist</fullName>
        </values>
        <values>
            <fullName>4%2E N%2EChannel-Shortlist%3B Channel-Best Off</fullName>
        </values>
        <values>
            <fullName>5%2E Preferred Supplier%2C Negotiating Terms</fullName>
        </values>
        <values>
            <fullName>6%2E ATP or PO Received</fullName>
        </values>
        <values>
            <fullName>Lost Order</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Locked Opportunity Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>7%2E Purchase Order Accepted</fullName>
        </values>
        <values>
            <fullName>Lost Order</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Quota Process</fullName>
        <description>Used to track user quotas</description>
        <isActive>true</isActive>
        <values>
            <fullName>Quota</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AM_Employee_ID__c</fullName>
        <label>AM Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Forecast_Category__c</fullName>
        <label>Mavenir Forecast Category</label>
        <picklist>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stretch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>E - Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE - Existing Expanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA - Existing Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N - New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Quota_Holder_Express__c</fullName>
        <label>Additional Quota Holder (Express)</label>
        <picklist>
            <picklistValues>
                <fullName>A Kwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Reed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahram Jalalizadeh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Swan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Fisher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Quinlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D v der Kwaak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Bueno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HL Cheng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hui-Thean Ong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J Davey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JK Tan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J Nagarajan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J Nichols</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J Yriondo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L Scheepsma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M Gardner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not defined</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>P Burton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per-Olof Bjorkhede</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P O&apos;Brien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P Rushton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R Padiyath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S Loukine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T Jabr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V Chen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W Wentzel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreed_Completion_Date__c</fullName>
        <inlineHelpText>To be completed by Sales Engineer - Completion date agreed between SE and Account Manager</inlineHelpText>
        <label>Agreed Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Days__c</fullName>
        <formula>IF(Bid_Approved_Date__c  -  Bid_Review_Submission__c  - 1 &lt;= 0,0, Bid_Approved_Date__c  -  Bid_Review_Submission__c - 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Approval_Email_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email the AM an Approval Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Approved_Date__c</fullName>
        <label>Bid Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Description__c</fullName>
        <inlineHelpText>Description of Bid Work required</inlineHelpText>
        <label>Bid Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bid_Kick_Off_Required__c</fullName>
        <label>Bid Kick Off Required</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bid_Kick_Off_completed__c</fullName>
        <label>Bid Kick Off completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bid_Review_Submission__c</fullName>
        <label>Bid Review Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Stage__c</fullName>
        <label>Bid Stage</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blue_Sheet_submitted__c</fullName>
        <inlineHelpText>Criteria:
Deal value over $250k 
New Product sale into an existing account 
New Account 
Any RFx requests 
If expressly requested to do so 
EIR deals on a case by case basis.</inlineHelpText>
        <label>Blue Sheet submitted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Book_Value__c</fullName>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Weighted_Value__c</fullName>
        <formula>Amount* Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Weighted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_weighted_GM__c</fullName>
        <formula>Book_Weighted_Value__c *  Gross_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book-weighted GM$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Employee_ID__c</fullName>
        <description>Channel Manager - Employee ID</description>
        <label>CM Employee ID</label>
        <picklist>
            <controllingField>Channel_Manager__c</controllingField>
            <picklistValues>
                <fullName>SFX00076</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFX00032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFX00600T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFX00601T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_collected__c</fullName>
        <inlineHelpText>This shows the amount of cash collected against book value and invoices raised.</inlineHelpText>
        <label>Cash collected</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel_Manager__c</fullName>
        <label>Channel Manager</label>
        <picklist>
            <controllingField>Channel__c</controllingField>
            <picklistValues>
                <fullName>A Reed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V Chen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Defined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive-PEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcatel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commverge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comptel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EADS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emircom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMV Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IdotTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intracom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masiya Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nortel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riyada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tecnotree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wipro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date_Validation__c</fullName>
        <label>Close Date Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_3rd_Party__c</fullName>
        <label>Comments 3rd Party</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <picklist>
            <picklistValues>
                <fullName>724 Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcatel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commverge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comptel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comverse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drutt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EADS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emericom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empower Interactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eServ Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMV Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IdotTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intracom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jataayu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jinny Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masiya Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mBalance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <inlineHelpText>To be completed by Sales Engineer</inlineHelpText>
        <label>% Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascension Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Antarctic Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Duration_Months__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Delivery Duration Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <inlineHelpText>To be completed by Sales Engineer - Estimation of effort required (days)</inlineHelpText>
        <label>Effort</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Pipeline_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Pipeline Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Comments__c</fullName>
        <label>Extended Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalPipeID__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>ExternalPipeID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>First_Bid_Approval_Submission__c</fullName>
        <label>First Bid Approval Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GAA_Employee_ID__c</fullName>
        <description>multiple quota holders become eligible for commission - ID to pull into Incent</description>
        <label>Additonal quota holder ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Dollars__c</fullName>
        <formula>Book_Value__c * Gross_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_Account_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>multiple quota holders become eligible for commission</description>
        <label>Additional quota holder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>The Gross Margin = (Purchase order value - External costs) / Purchase order value expressed as a Percentage</description>
        <inlineHelpText>Enter the Gross Margin from the approved PQS or if not available an estimated GM 
Note: Entry is mandatory for a Win</inlineHelpText>
        <label>GM%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>How_do_you_feel__c</fullName>
        <label>How do you feel?</label>
        <picklist>
            <picklistValues>
                <fullName>Euphoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comfort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discomfort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panic - Kevin&apos;s gonna kill me!</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>INTID__c</fullName>
        <label>INTID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incent_2Split_Amount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Incent - 2Split Amount %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Incent_Amount_Unit_Type__c</fullName>
        <defaultValue>&quot;USD&quot;</defaultValue>
        <label>Incent - Amount Unit Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incent_Batch_Name__c</fullName>
        <label>Incent - Batch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incent_Discount__c</fullName>
        <label>Incent - Discount</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incent_Incentive_Date__c</fullName>
        <formula>CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incent - Incentive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incent_Item_Code__c</fullName>
        <label>Incent - Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incent_Order_Type__c</fullName>
        <label>Incent - Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incent_Probability_Unit_Type__c</fullName>
        <defaultValue>&quot;PERCENT&quot;</defaultValue>
        <label>Incent - Probability Unit Type</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incent_Quantity__c</fullName>
        <label>Incent - Quantity</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incent_Related_Item_Code__c</fullName>
        <label>Incent - Related Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incent_Related_Order_Code__c</fullName>
        <label>Incent - Related Order Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incent_Split_Amount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Incent - Split Amount %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Incent_Win_Category__c</fullName>
        <label>Incent - Win Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incent__c</fullName>
        <defaultValue>&quot;PERCENT&quot;</defaultValue>
        <label>Incent - GM% Unit Type</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <label>Job Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Summary__c</fullName>
        <inlineHelpText>To be completed by Sales Engineer</inlineHelpText>
        <label>Latest Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Product_Family__c</fullName>
        <formula>CASE
(
Lead_Product__c ,

&quot;SMSC&quot; , &quot;AirMessenger&quot; ,
&quot;FusionMMSC&quot; , &quot;AirMessenger&quot; ,
&quot;Router (S)&quot; , &quot;AirMessenger&quot; ,
&quot;Router (M)&quot; , &quot;AirMessenger&quot; ,
&quot;Personal&quot; , &quot;AirMessenger&quot; ,
&quot;Store&quot; , &quot;AirMessenger&quot; ,

&quot;VASP&quot; , &quot;AirGate&quot; ,
&quot;MMS&quot; , &quot;AirGate&quot; ,
&quot;SMS&quot; , &quot;AirGate&quot; ,
&quot;USSD&quot; , &quot;AirGate&quot; ,
&quot;Web&quot; , &quot;AirGate&quot; ,

&quot;Admin&quot; , &quot;AirManager&quot; ,
&quot;Reporting&quot; , &quot;AirManager&quot; ,
&quot;Proactive&quot; , &quot;AirManager&quot; ,
&quot;Trends&quot; , &quot;AirManager&quot; ,
&quot;CDMA OTA&quot; , &quot;AirManager&quot; ,
&quot;Profile&quot; , &quot;AirManager&quot; ,

&quot;EIR&quot; , &quot;AirGuard&quot; ,
&quot;Antispam&quot; , &quot;AirGuard&quot; ,
&quot;EIR App&apos;s&quot; , &quot;AirGuard&quot; ,

&quot;Transcoder&quot; , &quot;Other&quot; ,
&quot;Partner&quot; , &quot;Other&quot; ,

&quot;Other&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Lead Product Family&quot; is automatically calculated from the lagest value product in the opportunity</inlineHelpText>
        <label>Lead Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Product_Remarks__c</fullName>
        <label>Lead Product Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Product_Type__c</fullName>
        <formula>CASE
(
Lead_Product__c ,

&quot;SMSC&quot; , &quot;EP&quot; ,
&quot;FusionMMSC&quot; , &quot;NP&quot; ,
&quot;Router (S)&quot; , &quot;EP&quot; ,
&quot;Router (M)&quot; , &quot;EP&quot; ,
&quot;Personal&quot; , &quot;NP&quot; ,
&quot;Store&quot; , &quot;EP&quot; ,

&quot;VASP&quot; , &quot;NP&quot; ,
&quot;MMS&quot; , &quot;NP&quot; ,
&quot;SMS&quot; , &quot;NP&quot; ,
&quot;USSD&quot; , &quot;EP&quot; ,
&quot;Web&quot; , &quot;NP&quot; ,

&quot;Admin&quot; , &quot;EP&quot; ,
&quot;Reporting&quot; , &quot;EP&quot; ,
&quot;Proactive&quot; , &quot;EP&quot; ,
&quot;CDMA OTA&quot; , &quot;EP&quot; ,
&quot;Profile&quot; , &quot;TBA&quot; ,

&quot;EIR&quot; , &quot;EP&quot; ,
&quot;Antispam&quot; , &quot;NP&quot; ,
&quot;EIR App&apos;s&quot; , &quot;TBA&quot; ,

&quot;Transcoder&quot; , &quot;TBA&quot; ,
&quot;Partner&quot; , &quot;TBA&quot; ,

&quot;Other not covered&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Values for each product are defined. NP = New Product, EP = Existing Product, TBA = yet to be defined.</inlineHelpText>
        <label>Lead Product Type</label>
        <type>Text</type>
    </fields>
</CustomObject>